I improved comments section

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -119,7 +119,7 @@ h4 {
 }
 
 /* 
- * Featured Articles Section 
+ * Featured Articles Section here 
  * Layout for featured articles beneath the navbar.
  */
 .featured-articles {
